Fix overlapping tags for tools

--- a/proverb/main.css
+++ b/proverb/main.css
@@ -15,6 +15,7 @@
     margin: 6px;
     padding: 2px;
     border-radius: 5px;
+    line-height: 27px;
 }
 
 .left {
